[gd_scene load_steps=10 format=2]

[ext_resource path="res://tools/editor/EditorModule.tscn" type="PackedScene" id=1]
[ext_resource path="res://tools/editor/editor_modules/SyncModule.gd" type="Script" id=2]
[ext_resource path="res://tools/editor/HBEditorSpinBox.gd" type="Script" id=3]
[ext_resource path="res://menus/HBEditorButton.gd" type="Script" id=4]
[ext_resource path="res://graphics/icons/clock-plus.svg" type="Texture" id=5]
[ext_resource path="res://menus/HBoxRatioContainer.gd" type="Script" id=6]
[ext_resource path="res://graphics/icons/metronome.svg" type="Texture" id=7]
[ext_resource path="res://graphics/icons/refresh-biggest.svg" type="Texture" id=8]
[ext_resource path="res://graphics/icons/cursor-click.svg" type="Texture" id=9]

[node name="EditorModule" instance=ExtResource( 1 )]
script = ExtResource( 2 )
module_location = "right_panel"
module_name = "Sync"
priority = 1
button_group_name = "sync_buttons"

[node name="VBoxContainer" parent="MarginContainer/ScrollContainer" index="0"]
margin_right = 1908.0
margin_bottom = 2088.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="0"]
margin_right = 1908.0
margin_bottom = 14.0
text = "Timeline settings..."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 1908.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "BPM:"

[node name="BPMSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 37.0
margin_right = 947.0
margin_bottom = 24.0
hint_tooltip = "Beats per minute to use in the timeline.
(This is used for placing the notes only)"
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
step = 0.01
value = 150.0
allow_greater = true
suffix = "BPM"
arrow_step = 1.0
script = ExtResource( 3 )

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="2"]
margin_left = 951.0
margin_top = 5.0
margin_right = 994.0
margin_bottom = 19.0
text = "Offset:"

[node name="OffsetSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer" index="3"]
unique_name_in_owner = true
margin_left = 998.0
margin_right = 1908.0
margin_bottom = 24.0
hint_tooltip = "Offset, in milliseconds, of the first
beat of the song."
size_flags_horizontal = 3
max_value = 1000.0
allow_greater = true
suffix = "ms"
script = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="2"]
margin_top = 46.0
margin_right = 1908.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="GridResolutionOptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2" index="0"]
unique_name_in_owner = true
margin_right = 952.0
margin_bottom = 20.0
hint_tooltip = "Separation between notes, as a
fraction of a whole note."
size_flags_horizontal = 3

[node name="SignatureOptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
margin_left = 956.0
margin_right = 1908.0
margin_bottom = 20.0
hint_tooltip = "Amount of beats inbetween bars
(Yellow beats)."
size_flags_horizontal = 3

[node name="HBoxRatioContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="3"]
margin_top = 70.0
margin_right = 1908.0
margin_bottom = 1036.0
rect_min_size = Vector2( 260, 0 )
script = ExtResource( 6 )

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer" index="0" groups=["sync_buttons"]]
margin_right = 952.0
margin_bottom = 966.0
size_flags_horizontal = 3
script = ExtResource( 4 )
text = "Toggle BPM preview"
tooltip = "Plays a metronome sound every beat.
Use this to check your timeline settings."
texture = ExtResource( 7 )
disable_when_playing = false
button_mode = "function"
function_name = "toggle_metronome"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer" index="1" groups=["sync_buttons"]]
margin_left = 956.0
margin_right = 1908.0
margin_bottom = 966.0
size_flags_horizontal = 3
script = ExtResource( 4 )
text = "Set offset at cursor"
tooltip = "Sets the offset to the position of the
cursor.
(Place the cursor at the"
texture = ExtResource( 5 )
button_mode = "function"
function_name = "set_offset_at_playhead"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer" index="4"]
margin_top = 1040.0
margin_right = 1908.0
margin_bottom = 1044.0

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer" index="5"]
margin_top = 1048.0
margin_right = 1908.0
margin_bottom = 1062.0
text = "BPM Calculator..."
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="6"]
margin_top = 1066.0
margin_right = 1908.0
margin_bottom = 1090.0

[node name="AverageBPMLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="0"]
margin_top = 5.0
margin_right = 952.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Average BPM:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AverageBPMLineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
margin_left = 956.0
margin_right = 1908.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "0 BPM"
editable = false
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="7"]
margin_top = 1094.0
margin_right = 1908.0
margin_bottom = 1118.0

[node name="WholeBPMLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4" index="0"]
margin_top = 5.0
margin_right = 952.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Nearest Whole BPM:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WholeBPMLineEdit" type="LineEdit" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4" index="1"]
unique_name_in_owner = true
margin_left = 956.0
margin_right = 1908.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "0 BPM"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxRatioContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer" index="8"]
margin_top = 1122.0
margin_right = 1908.0
margin_bottom = 2088.0
rect_min_size = Vector2( 130, 0 )
script = ExtResource( 6 )

[node name="HBEditorButton" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer2" index="0" groups=["sync_buttons"]]
margin_right = 952.0
margin_bottom = 966.0
size_flags_horizontal = 3
script = ExtResource( 4 )
text = "Click here"
tooltip = "Tap here or press the shortcut to the
beat of the song to calculate the bpm."
texture = ExtResource( 9 )
disable_when_playing = false
button_mode = "function"
function_name = "calculator_pressed"
action = "editor_tap_metronome"

[node name="HBEditorButton2" type="Container" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxRatioContainer2" index="1" groups=["sync_buttons"]]
margin_left = 956.0
margin_right = 1908.0
margin_bottom = 966.0
size_flags_horizontal = 3
script = ExtResource( 4 )
text = "Reset"
tooltip = "Reset the calculated values."
texture = ExtResource( 8 )
disable_when_playing = false
button_mode = "function"
function_name = "reset_pressed"

[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/BPMSpinBox" to="." method="set_bpm"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/OffsetSpinBox" to="." method="set_offset"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/GridResolutionOptionButton" to="." method="set_resolution"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2/SignatureOptionButton" to="." method="set_signature"]
